# smartasync

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CLAUDE.md  CRITICAL-ANALYSIS.md  POC-EVALUATION.md  README.md  TECH-REPORT.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  no-claude-coauthor.yml  publish.yml  test.yml
docs/: SCENARIOS-IMPACT-MATRIX.md  conf.py  index.md  index.rst  overview.rst
docs/advanced/: comparison.md  performance.md  technical-overview.md
docs/api/: decorator.md
docs/assets/: .gitkeep
docs/future-enhancement-ideas/: loop-reuse-patterns.md
docs/how-it-works/: README.md  async-to-sync.md  calling-async-from-sync.md  index.md  sync-to-async.md
docs/integrations/: smartswitch.md
docs/scenarios/: 01-sync-app-async-libs.md  02-async-app-sync-libs.md  03-testing-async-code.md  04-unified-library-api.md  05-gradual-migration.md  06-plugin-systems.md  07-mixed-framework.md  08-web-scraping.md  09-interactive-environments.md  A1-sync-app-async-libs.md  index.md
docs/user-guide/: basic.md  installation.md  quickstart.md
examples/: scenario_a2_async_calls_sync.py
llm-docs/: API.yaml  CHANGELOG.md  EXAMPLES.md  PATTERNS.md  QUICKSTART.md  README.md
src/smartasync/: __init__.py  core.py  smartasync_plugin.py
src/smartsync/: __init__.py  core.py
tests/: test_smartasync.py  test_smartswitch_plugin.py  test_smartsync.py
